k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: optimus-frame-core
  labels:
    app.kubernetes.io/name: optimus-frame-core
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: optimus-frame
    app: optimus-frame-core
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: optimus-frame-core
    app: optimus-frame-core
